// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`cron demo > renders basic correctly 1`] = `
<div
  class="ant-cron ant-cron-medium css-var-root ant-cron-css-var"
  data-disabled="false"
  data-readonly="false"
  data-size="medium"
>
  <input
    aria-label="Cron expression"
    class="ant-input ant-input-outlined css-var-root ant-input-css-var"
    type="text"
    value="0 0 9 * * ?"
  />
  <div
    class="ant-cron-fields"
  >
    <div
      aria-label="Cron fields"
      class="ant-cron-field-tabs"
      role="tablist"
    >
      <button
        aria-controls="cron-1-panel-second"
        aria-selected="false"
        class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-cron-field-tab"
        data-field="second"
        id="cron-1-tab-second"
        role="tab"
        tabindex="-1"
        type="button"
      >
        <transition-stub
          appear="false"
          css="true"
          enteractiveclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-prepare ant-btn-loading-icon-motion-enter-prepare "
          enterfromclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-prepare ant-btn-loading-icon-motion-enter-prepare ant-btn-loading-icon-motion-enter-start"
          entertoclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-active ant-btn-loading-icon-motion-enter-active"
          leaveactiveclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave ant-btn-loading-icon-motion-leave-active"
          leavefromclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave"
          leavetoclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave ant-btn-loading-icon-motion-leave-active"
          name="ant-btn-loading-icon-motion"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <span>
          Second
        </span>
        <!---->
      </button>
      <button
        aria-controls="cron-1-panel-minute"
        aria-selected="true"
        class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-cron-field-tab ant-cron-field-tab-active"
        data-field="minute"
        id="cron-1-tab-minute"
        role="tab"
        tabindex="0"
        type="button"
      >
        <transition-stub
          appear="false"
          css="true"
          enteractiveclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-prepare ant-btn-loading-icon-motion-enter-prepare "
          enterfromclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-prepare ant-btn-loading-icon-motion-enter-prepare ant-btn-loading-icon-motion-enter-start"
          entertoclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-active ant-btn-loading-icon-motion-enter-active"
          leaveactiveclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave ant-btn-loading-icon-motion-leave-active"
          leavefromclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave"
          leavetoclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave ant-btn-loading-icon-motion-leave-active"
          name="ant-btn-loading-icon-motion"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <span>
          Minute
        </span>
        <!---->
      </button>
      <button
        aria-controls="cron-1-panel-hour"
        aria-selected="false"
        class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-cron-field-tab"
        data-field="hour"
        id="cron-1-tab-hour"
        role="tab"
        tabindex="-1"
        type="button"
      >
        <transition-stub
          appear="false"
          css="true"
          enteractiveclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-prepare ant-btn-loading-icon-motion-enter-prepare "
          enterfromclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-prepare ant-btn-loading-icon-motion-enter-prepare ant-btn-loading-icon-motion-enter-start"
          entertoclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-active ant-btn-loading-icon-motion-enter-active"
          leaveactiveclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave ant-btn-loading-icon-motion-leave-active"
          leavefromclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave"
          leavetoclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave ant-btn-loading-icon-motion-leave-active"
          name="ant-btn-loading-icon-motion"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <span>
          Hour
        </span>
        <!---->
      </button>
      <button
        aria-controls="cron-1-panel-day"
        aria-selected="false"
        class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-cron-field-tab"
        data-field="day"
        id="cron-1-tab-day"
        role="tab"
        tabindex="-1"
        type="button"
      >
        <transition-stub
          appear="false"
          css="true"
          enteractiveclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-prepare ant-btn-loading-icon-motion-enter-prepare "
          enterfromclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-prepare ant-btn-loading-icon-motion-enter-prepare ant-btn-loading-icon-motion-enter-start"
          entertoclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-active ant-btn-loading-icon-motion-enter-active"
          leaveactiveclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave ant-btn-loading-icon-motion-leave-active"
          leavefromclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave"
          leavetoclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave ant-btn-loading-icon-motion-leave-active"
          name="ant-btn-loading-icon-motion"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <span>
          Day
        </span>
        <!---->
      </button>
      <button
        aria-controls="cron-1-panel-month"
        aria-selected="false"
        class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-cron-field-tab"
        data-field="month"
        id="cron-1-tab-month"
        role="tab"
        tabindex="-1"
        type="button"
      >
        <transition-stub
          appear="false"
          css="true"
          enteractiveclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-prepare ant-btn-loading-icon-motion-enter-prepare "
          enterfromclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-prepare ant-btn-loading-icon-motion-enter-prepare ant-btn-loading-icon-motion-enter-start"
          entertoclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-active ant-btn-loading-icon-motion-enter-active"
          leaveactiveclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave ant-btn-loading-icon-motion-leave-active"
          leavefromclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave"
          leavetoclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave ant-btn-loading-icon-motion-leave-active"
          name="ant-btn-loading-icon-motion"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <span>
          Month
        </span>
        <!---->
      </button>
      <button
        aria-controls="cron-1-panel-week"
        aria-selected="false"
        class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-cron-field-tab"
        data-field="week"
        id="cron-1-tab-week"
        role="tab"
        tabindex="-1"
        type="button"
      >
        <transition-stub
          appear="false"
          css="true"
          enteractiveclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-prepare ant-btn-loading-icon-motion-enter-prepare "
          enterfromclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-prepare ant-btn-loading-icon-motion-enter-prepare ant-btn-loading-icon-motion-enter-start"
          entertoclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-active ant-btn-loading-icon-motion-enter-active"
          leaveactiveclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave ant-btn-loading-icon-motion-leave-active"
          leavefromclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave"
          leavetoclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave ant-btn-loading-icon-motion-leave-active"
          name="ant-btn-loading-icon-motion"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <span>
          Week
        </span>
        <!---->
      </button>
    </div>
    <div
      aria-labelledby="cron-1-tab-minute"
      class="ant-cron-field"
      data-disabled="false"
      data-field="minute"
      data-invalid="false"
      data-mode="specified"
      id="cron-1-panel-minute"
      role="tabpanel"
    >
      <div
        aria-label="segmented control"
        aria-orientation="horizontal"
        class="ant-segmented css-var-root css-var-root"
        role="radiogroup"
        size="medium"
        tabindex="0"
      >
        <div
          class="ant-segmented-group"
        >
          <!---->
          <label
            class="ant-segmented-item"
          >
            <input
              class="ant-segmented-item-input"
              name="v-0"
              type="radio"
            />
            <div
              class="ant-segmented-item-label"
              title="Every"
            >
              Every
            </div>
          </label>
          <label
            class="ant-segmented-item"
          >
            <input
              class="ant-segmented-item-input"
              name="v-0"
              type="radio"
            />
            <div
              class="ant-segmented-item-label"
              title="Interval"
            >
              Interval
            </div>
          </label>
          <label
            class="ant-segmented-item ant-segmented-item-selected"
          >
            <input
              checked=""
              class="ant-segmented-item-input"
              name="v-0"
              type="radio"
            />
            <div
              class="ant-segmented-item-label"
              title="Specified"
            >
              Specified
            </div>
          </label>
          <label
            class="ant-segmented-item"
          >
            <input
              class="ant-segmented-item-input"
              name="v-0"
              type="radio"
            />
            <div
              class="ant-segmented-item-label"
              title="Range"
            >
              Range
            </div>
          </label>
          <label
            class="ant-segmented-item"
          >
            <input
              class="ant-segmented-item-input"
              name="v-0"
              type="radio"
            />
            <div
              class="ant-segmented-item-label"
              title="List"
            >
              List
            </div>
          </label>
        </div>
      </div>
      <div
        class="ant-cron-controls"
      >
        <div
          class="ant-input-number ant-input-number-mode-input css-var-root ant-input-number-css-var ant-input-number-outlined ant-input-number-without-controls"
        >
          <!---->
          <!---->
          <input
            aria-label="Minute value"
            aria-valuemax="59"
            aria-valuemin="0"
            aria-valuenow="0"
            autocomplete="off"
            class="ant-input-number-input"
            role="spinbutton"
            step="1"
            value="0"
          />
          <!---->
          <!---->
          <!---->
        </div>
      </div>
    </div>
  </div>
  <!---->
  <!---->
  <!---->
</div>
`;

exports[`cron demo > renders presets correctly 1`] = `
<div
  class="ant-cron ant-cron-medium css-var-root ant-cron-css-var"
  data-disabled="false"
  data-readonly="false"
  data-size="medium"
>
  <input
    aria-label="Cron expression"
    class="ant-input ant-input-outlined css-var-root ant-input-css-var"
    type="text"
    value="0 */5 * * * ?"
  />
  <div
    class="ant-cron-fields"
  >
    <div
      aria-label="Cron fields"
      class="ant-cron-field-tabs"
      role="tablist"
    >
      <button
        aria-controls="cron-2-panel-second"
        aria-selected="false"
        class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-cron-field-tab"
        data-field="second"
        id="cron-2-tab-second"
        role="tab"
        tabindex="-1"
        type="button"
      >
        <transition-stub
          appear="false"
          css="true"
          enteractiveclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-prepare ant-btn-loading-icon-motion-enter-prepare "
          enterfromclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-prepare ant-btn-loading-icon-motion-enter-prepare ant-btn-loading-icon-motion-enter-start"
          entertoclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-active ant-btn-loading-icon-motion-enter-active"
          leaveactiveclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave ant-btn-loading-icon-motion-leave-active"
          leavefromclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave"
          leavetoclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave ant-btn-loading-icon-motion-leave-active"
          name="ant-btn-loading-icon-motion"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <span>
          Second
        </span>
        <!---->
      </button>
      <button
        aria-controls="cron-2-panel-minute"
        aria-selected="true"
        class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-cron-field-tab ant-cron-field-tab-active"
        data-field="minute"
        id="cron-2-tab-minute"
        role="tab"
        tabindex="0"
        type="button"
      >
        <transition-stub
          appear="false"
          css="true"
          enteractiveclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-prepare ant-btn-loading-icon-motion-enter-prepare "
          enterfromclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-prepare ant-btn-loading-icon-motion-enter-prepare ant-btn-loading-icon-motion-enter-start"
          entertoclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-active ant-btn-loading-icon-motion-enter-active"
          leaveactiveclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave ant-btn-loading-icon-motion-leave-active"
          leavefromclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave"
          leavetoclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave ant-btn-loading-icon-motion-leave-active"
          name="ant-btn-loading-icon-motion"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <span>
          Minute
        </span>
        <!---->
      </button>
      <button
        aria-controls="cron-2-panel-hour"
        aria-selected="false"
        class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-cron-field-tab"
        data-field="hour"
        id="cron-2-tab-hour"
        role="tab"
        tabindex="-1"
        type="button"
      >
        <transition-stub
          appear="false"
          css="true"
          enteractiveclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-prepare ant-btn-loading-icon-motion-enter-prepare "
          enterfromclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-prepare ant-btn-loading-icon-motion-enter-prepare ant-btn-loading-icon-motion-enter-start"
          entertoclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-active ant-btn-loading-icon-motion-enter-active"
          leaveactiveclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave ant-btn-loading-icon-motion-leave-active"
          leavefromclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave"
          leavetoclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave ant-btn-loading-icon-motion-leave-active"
          name="ant-btn-loading-icon-motion"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <span>
          Hour
        </span>
        <!---->
      </button>
      <button
        aria-controls="cron-2-panel-day"
        aria-selected="false"
        class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-cron-field-tab"
        data-field="day"
        id="cron-2-tab-day"
        role="tab"
        tabindex="-1"
        type="button"
      >
        <transition-stub
          appear="false"
          css="true"
          enteractiveclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-prepare ant-btn-loading-icon-motion-enter-prepare "
          enterfromclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-prepare ant-btn-loading-icon-motion-enter-prepare ant-btn-loading-icon-motion-enter-start"
          entertoclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-active ant-btn-loading-icon-motion-enter-active"
          leaveactiveclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave ant-btn-loading-icon-motion-leave-active"
          leavefromclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave"
          leavetoclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave ant-btn-loading-icon-motion-leave-active"
          name="ant-btn-loading-icon-motion"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <span>
          Day
        </span>
        <!---->
      </button>
      <button
        aria-controls="cron-2-panel-month"
        aria-selected="false"
        class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-cron-field-tab"
        data-field="month"
        id="cron-2-tab-month"
        role="tab"
        tabindex="-1"
        type="button"
      >
        <transition-stub
          appear="false"
          css="true"
          enteractiveclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-prepare ant-btn-loading-icon-motion-enter-prepare "
          enterfromclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-prepare ant-btn-loading-icon-motion-enter-prepare ant-btn-loading-icon-motion-enter-start"
          entertoclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-active ant-btn-loading-icon-motion-enter-active"
          leaveactiveclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave ant-btn-loading-icon-motion-leave-active"
          leavefromclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave"
          leavetoclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave ant-btn-loading-icon-motion-leave-active"
          name="ant-btn-loading-icon-motion"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <span>
          Month
        </span>
        <!---->
      </button>
      <button
        aria-controls="cron-2-panel-week"
        aria-selected="false"
        class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-cron-field-tab"
        data-field="week"
        id="cron-2-tab-week"
        role="tab"
        tabindex="-1"
        type="button"
      >
        <transition-stub
          appear="false"
          css="true"
          enteractiveclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-prepare ant-btn-loading-icon-motion-enter-prepare "
          enterfromclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-prepare ant-btn-loading-icon-motion-enter-prepare ant-btn-loading-icon-motion-enter-start"
          entertoclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-active ant-btn-loading-icon-motion-enter-active"
          leaveactiveclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave ant-btn-loading-icon-motion-leave-active"
          leavefromclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave"
          leavetoclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave ant-btn-loading-icon-motion-leave-active"
          name="ant-btn-loading-icon-motion"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <span>
          Week
        </span>
        <!---->
      </button>
    </div>
    <div
      aria-labelledby="cron-2-tab-minute"
      class="ant-cron-field"
      data-disabled="false"
      data-field="minute"
      data-invalid="false"
      data-mode="interval"
      id="cron-2-panel-minute"
      role="tabpanel"
    >
      <div
        aria-label="segmented control"
        aria-orientation="horizontal"
        class="ant-segmented css-var-root css-var-root"
        role="radiogroup"
        size="medium"
        tabindex="0"
      >
        <div
          class="ant-segmented-group"
        >
          <!---->
          <label
            class="ant-segmented-item"
          >
            <input
              class="ant-segmented-item-input"
              name="v-0"
              type="radio"
            />
            <div
              class="ant-segmented-item-label"
              title="Every"
            >
              Every
            </div>
          </label>
          <label
            class="ant-segmented-item ant-segmented-item-selected"
          >
            <input
              checked=""
              class="ant-segmented-item-input"
              name="v-0"
              type="radio"
            />
            <div
              class="ant-segmented-item-label"
              title="Interval"
            >
              Interval
            </div>
          </label>
          <label
            class="ant-segmented-item"
          >
            <input
              class="ant-segmented-item-input"
              name="v-0"
              type="radio"
            />
            <div
              class="ant-segmented-item-label"
              title="Specified"
            >
              Specified
            </div>
          </label>
          <label
            class="ant-segmented-item"
          >
            <input
              class="ant-segmented-item-input"
              name="v-0"
              type="radio"
            />
            <div
              class="ant-segmented-item-label"
              title="Range"
            >
              Range
            </div>
          </label>
          <label
            class="ant-segmented-item"
          >
            <input
              class="ant-segmented-item-input"
              name="v-0"
              type="radio"
            />
            <div
              class="ant-segmented-item-label"
              title="List"
            >
              List
            </div>
          </label>
        </div>
      </div>
      <div
        class="ant-cron-controls"
      >
        <div
          class="ant-input-number ant-input-number-mode-input css-var-root ant-input-number-css-var ant-input-number-outlined ant-input-number-without-controls"
        >
          <!---->
          <!---->
          <input
            aria-label="Minute start"
            aria-valuemax="59"
            aria-valuemin="0"
            aria-valuenow="5"
            autocomplete="off"
            class="ant-input-number-input"
            role="spinbutton"
            step="1"
            value="5"
          />
          <!---->
          <!---->
          <!---->
        </div>
        <span>
          every
        </span>
        <div
          class="ant-input-number ant-input-number-mode-input css-var-root ant-input-number-css-var ant-input-number-outlined ant-input-number-without-controls ant-input-number-out-of-range"
        >
          <!---->
          <!---->
          <input
            aria-label="Minute interval"
            aria-valuemax="60"
            aria-valuemin="1"
            aria-valuenow="0"
            autocomplete="off"
            class="ant-input-number-input"
            role="spinbutton"
            step="1"
            value="0"
          />
          <!---->
          <!---->
          <!---->
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-cron-presets"
  >
    <button
      class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-sm"
      type="button"
    >
      <transition-stub
        appear="false"
        css="true"
        enteractiveclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-prepare ant-btn-loading-icon-motion-enter-prepare "
        enterfromclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-prepare ant-btn-loading-icon-motion-enter-prepare ant-btn-loading-icon-motion-enter-start"
        entertoclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-active ant-btn-loading-icon-motion-enter-active"
        leaveactiveclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave ant-btn-loading-icon-motion-leave-active"
        leavefromclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave"
        leavetoclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave ant-btn-loading-icon-motion-leave-active"
        name="ant-btn-loading-icon-motion"
        persisted="false"
      >
        <!---->
      </transition-stub>
      <span>
        Every minute
      </span>
      <!---->
    </button>
    <button
      class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-sm"
      type="button"
    >
      <transition-stub
        appear="false"
        css="true"
        enteractiveclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-prepare ant-btn-loading-icon-motion-enter-prepare "
        enterfromclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-prepare ant-btn-loading-icon-motion-enter-prepare ant-btn-loading-icon-motion-enter-start"
        entertoclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-active ant-btn-loading-icon-motion-enter-active"
        leaveactiveclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave ant-btn-loading-icon-motion-leave-active"
        leavefromclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave"
        leavetoclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave ant-btn-loading-icon-motion-leave-active"
        name="ant-btn-loading-icon-motion"
        persisted="false"
      >
        <!---->
      </transition-stub>
      <span>
        Every hour
      </span>
      <!---->
    </button>
    <button
      class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-sm"
      type="button"
    >
      <transition-stub
        appear="false"
        css="true"
        enteractiveclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-prepare ant-btn-loading-icon-motion-enter-prepare "
        enterfromclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-prepare ant-btn-loading-icon-motion-enter-prepare ant-btn-loading-icon-motion-enter-start"
        entertoclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-active ant-btn-loading-icon-motion-enter-active"
        leaveactiveclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave ant-btn-loading-icon-motion-leave-active"
        leavefromclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave"
        leavetoclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave ant-btn-loading-icon-motion-leave-active"
        name="ant-btn-loading-icon-motion"
        persisted="false"
      >
        <!---->
      </transition-stub>
      <span>
        Every day at 09:00
      </span>
      <!---->
    </button>
  </div>
  <div
    class="ant-cron-preview"
  >
    <span>
      Every 5 minutes
    </span>
    <span>
      Next run: 2026-09-08 00:05:00
    </span>
  </div>
  <!---->
</div>
`;

exports[`cron demo > renders semantic correctly 1`] = `
<div
  class="ant-cron ant-cron-medium css-var-root ant-cron-css-var"
  data-disabled="false"
  data-readonly="false"
  data-size="medium"
>
  <input
    aria-label="Cron expression"
    class="ant-input ant-input-outlined css-var-root ant-input-css-var"
    type="text"
    value="0 0 18 ? * MON,FRI"
  />
  <div
    class="ant-cron-fields"
    style="max-width: 680px;"
  >
    <div
      aria-label="Cron fields"
      class="ant-cron-field-tabs"
      role="tablist"
    >
      <button
        aria-controls="cron-3-panel-second"
        aria-selected="false"
        class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-cron-field-tab"
        data-field="second"
        id="cron-3-tab-second"
        role="tab"
        tabindex="-1"
        type="button"
      >
        <transition-stub
          appear="false"
          css="true"
          enteractiveclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-prepare ant-btn-loading-icon-motion-enter-prepare "
          enterfromclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-prepare ant-btn-loading-icon-motion-enter-prepare ant-btn-loading-icon-motion-enter-start"
          entertoclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-active ant-btn-loading-icon-motion-enter-active"
          leaveactiveclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave ant-btn-loading-icon-motion-leave-active"
          leavefromclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave"
          leavetoclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave ant-btn-loading-icon-motion-leave-active"
          name="ant-btn-loading-icon-motion"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <span>
          Second
        </span>
        <!---->
      </button>
      <button
        aria-controls="cron-3-panel-minute"
        aria-selected="true"
        class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-cron-field-tab ant-cron-field-tab-active"
        data-field="minute"
        id="cron-3-tab-minute"
        role="tab"
        tabindex="0"
        type="button"
      >
        <transition-stub
          appear="false"
          css="true"
          enteractiveclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-prepare ant-btn-loading-icon-motion-enter-prepare "
          enterfromclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-prepare ant-btn-loading-icon-motion-enter-prepare ant-btn-loading-icon-motion-enter-start"
          entertoclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-active ant-btn-loading-icon-motion-enter-active"
          leaveactiveclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave ant-btn-loading-icon-motion-leave-active"
          leavefromclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave"
          leavetoclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave ant-btn-loading-icon-motion-leave-active"
          name="ant-btn-loading-icon-motion"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <span>
          Minute
        </span>
        <!---->
      </button>
      <button
        aria-controls="cron-3-panel-hour"
        aria-selected="false"
        class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-cron-field-tab"
        data-field="hour"
        id="cron-3-tab-hour"
        role="tab"
        tabindex="-1"
        type="button"
      >
        <transition-stub
          appear="false"
          css="true"
          enteractiveclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-prepare ant-btn-loading-icon-motion-enter-prepare "
          enterfromclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-prepare ant-btn-loading-icon-motion-enter-prepare ant-btn-loading-icon-motion-enter-start"
          entertoclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-active ant-btn-loading-icon-motion-enter-active"
          leaveactiveclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave ant-btn-loading-icon-motion-leave-active"
          leavefromclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave"
          leavetoclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave ant-btn-loading-icon-motion-leave-active"
          name="ant-btn-loading-icon-motion"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <span>
          Hour
        </span>
        <!---->
      </button>
      <button
        aria-controls="cron-3-panel-day"
        aria-selected="false"
        class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-cron-field-tab"
        data-field="day"
        id="cron-3-tab-day"
        role="tab"
        tabindex="-1"
        type="button"
      >
        <transition-stub
          appear="false"
          css="true"
          enteractiveclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-prepare ant-btn-loading-icon-motion-enter-prepare "
          enterfromclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-prepare ant-btn-loading-icon-motion-enter-prepare ant-btn-loading-icon-motion-enter-start"
          entertoclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-active ant-btn-loading-icon-motion-enter-active"
          leaveactiveclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave ant-btn-loading-icon-motion-leave-active"
          leavefromclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave"
          leavetoclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave ant-btn-loading-icon-motion-leave-active"
          name="ant-btn-loading-icon-motion"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <span>
          Day
        </span>
        <!---->
      </button>
      <button
        aria-controls="cron-3-panel-month"
        aria-selected="false"
        class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-cron-field-tab"
        data-field="month"
        id="cron-3-tab-month"
        role="tab"
        tabindex="-1"
        type="button"
      >
        <transition-stub
          appear="false"
          css="true"
          enteractiveclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-prepare ant-btn-loading-icon-motion-enter-prepare "
          enterfromclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-prepare ant-btn-loading-icon-motion-enter-prepare ant-btn-loading-icon-motion-enter-start"
          entertoclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-active ant-btn-loading-icon-motion-enter-active"
          leaveactiveclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave ant-btn-loading-icon-motion-leave-active"
          leavefromclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave"
          leavetoclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave ant-btn-loading-icon-motion-leave-active"
          name="ant-btn-loading-icon-motion"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <span>
          Month
        </span>
        <!---->
      </button>
      <button
        aria-controls="cron-3-panel-week"
        aria-selected="false"
        class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-cron-field-tab"
        data-field="week"
        id="cron-3-tab-week"
        role="tab"
        tabindex="-1"
        type="button"
      >
        <transition-stub
          appear="false"
          css="true"
          enteractiveclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-prepare ant-btn-loading-icon-motion-enter-prepare "
          enterfromclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-prepare ant-btn-loading-icon-motion-enter-prepare ant-btn-loading-icon-motion-enter-start"
          entertoclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-active ant-btn-loading-icon-motion-enter-active"
          leaveactiveclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave ant-btn-loading-icon-motion-leave-active"
          leavefromclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave"
          leavetoclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave ant-btn-loading-icon-motion-leave-active"
          name="ant-btn-loading-icon-motion"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <span>
          Week
        </span>
        <!---->
      </button>
    </div>
    <div
      aria-labelledby="cron-3-tab-minute"
      class="ant-cron-field"
      data-disabled="false"
      data-field="minute"
      data-invalid="false"
      data-mode="specified"
      id="cron-3-panel-minute"
      role="tabpanel"
    >
      <div
        aria-label="segmented control"
        aria-orientation="horizontal"
        class="ant-segmented css-var-root css-var-root"
        role="radiogroup"
        size="medium"
        tabindex="0"
      >
        <div
          class="ant-segmented-group"
        >
          <!---->
          <label
            class="ant-segmented-item"
          >
            <input
              class="ant-segmented-item-input"
              name="v-0"
              type="radio"
            />
            <div
              class="ant-segmented-item-label"
              title="Every"
            >
              Every
            </div>
          </label>
          <label
            class="ant-segmented-item"
          >
            <input
              class="ant-segmented-item-input"
              name="v-0"
              type="radio"
            />
            <div
              class="ant-segmented-item-label"
              title="Interval"
            >
              Interval
            </div>
          </label>
          <label
            class="ant-segmented-item ant-segmented-item-selected"
          >
            <input
              checked=""
              class="ant-segmented-item-input"
              name="v-0"
              type="radio"
            />
            <div
              class="ant-segmented-item-label"
              title="Specified"
            >
              Specified
            </div>
          </label>
          <label
            class="ant-segmented-item"
          >
            <input
              class="ant-segmented-item-input"
              name="v-0"
              type="radio"
            />
            <div
              class="ant-segmented-item-label"
              title="Range"
            >
              Range
            </div>
          </label>
          <label
            class="ant-segmented-item"
          >
            <input
              class="ant-segmented-item-input"
              name="v-0"
              type="radio"
            />
            <div
              class="ant-segmented-item-label"
              title="List"
            >
              List
            </div>
          </label>
        </div>
      </div>
      <div
        class="ant-cron-controls"
      >
        <div
          class="ant-input-number ant-input-number-mode-input css-var-root ant-input-number-css-var ant-input-number-outlined ant-input-number-without-controls"
        >
          <!---->
          <!---->
          <input
            aria-label="Minute value"
            aria-valuemax="59"
            aria-valuemin="0"
            aria-valuenow="0"
            autocomplete="off"
            class="ant-input-number-input"
            role="spinbutton"
            step="1"
            value="0"
          />
          <!---->
          <!---->
          <!---->
        </div>
      </div>
    </div>
  </div>
  <!---->
  <div
    class="ant-cron-preview cron-demo-preview"
  >
    <span>
      Custom schedule
    </span>
    <span>
      Next run: 2026-09-08 18:00:00
    </span>
  </div>
  <!---->
</div>
`;
